# ebf

./: AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  bf2c.c  bfi.c  configure.ac  eval.c  eval.h  parser.h
examples/: Makefile.am  lame.bf  wonk.bf
src/: Makefile.am  bf2as.c  bf2c.c  bfc.c  bfi.c  bfsc.c  eval.c  eval.h  lex.c  lex.h  optimizer.c  optimizer.h  parser.c  parser.h
